CSFML/include/Window/Event.h

typedef struct
{
    int type;
    sfKeyCode code;
    sfBool alt;
    sfBool control;
    sfBool shift;
    sfBool system;
} sfKeyEvent;
typedef struct
{
    int type;
    sfUint32 unicode;
} sfTextEvent;
typedef struct
{
    int type;
    int x;
    int y;
} sfMouseMoveEvent;
typedef struct
{
    int type;
    sfMouseButton button;
    int x;
    int y;
} sfMouseButtonEvent;
typedef struct
{
    int type;
    sfMouseWheel wheel;
    float delta;
    int x;
    int y;
} sfMouseWheelScrollEvent;
typedef struct
{
    int type;
    unsigned int joystickId;
    sfJoystickAxis axis;
    float position;
} sfJoystickMoveEvent;