ffi/csfml-window-sys/src/lib.rs

pub const sfEventType_sfEvtClosed: sfEventType = 0;
pub const sfEventType_sfEvtResized: sfEventType = 1;
pub const sfEventType_sfEvtLostFocus: sfEventType = 2;
pub const sfEventType_sfEvtGainedFocus: sfEventType = 3;
pub const sfEventType_sfEvtTextEntered: sfEventType = 4;
pub const sfEventType_sfEvtKeyPressed: sfEventType = 5;
pub const sfEventType_sfEvtKeyReleased: sfEventType = 6;
pub const sfEventType_sfEvtMouseWheelMoved: sfEventType = 7;
pub const sfEventType_sfEvtMouseWheelScrolled: sfEventType = 8;
pub const sfEventType_sfEvtMouseButtonPressed: sfEventType = 9;
pub const sfEventType_sfEvtMouseButtonReleased: sfEventType = 10;
pub const sfEventType_sfEvtMouseMoved: sfEventType = 11;
pub const sfEventType_sfEvtMouseEntered: sfEventType = 12;
pub const sfEventType_sfEvtMouseLeft: sfEventType = 13;
pub const sfEventType_sfEvtJoystickButtonPressed: sfEventType = 14;
pub const sfEventType_sfEvtJoystickButtonReleased: sfEventType = 15;
pub const sfEventType_sfEvtJoystickMoved: sfEventType = 16;
pub const sfEventType_sfEvtJoystickConnected: sfEventType = 17;
pub const sfEventType_sfEvtJoystickDisconnected: sfEventType = 18;
pub const sfEventType_sfEvtTouchBegan: sfEventType = 19;
pub const sfEventType_sfEvtTouchMoved: sfEventType = 20;
pub const sfEventType_sfEvtTouchEnded: sfEventType = 21;
pub const sfEventType_sfEvtSensorChanged: sfEventType = 22;
pub const sfEventType_sfEvtCount: sfEventType = 23;
pub type sfEventType = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfKeyEvent {
    pub type_: sfEventType,
    pub code: sfKeyCode,
    pub alt: sfBool,
    pub control: sfBool,
    pub shift: sfBool,
    pub system: sfBool,
}
#[test]
fn bindgen_test_layout_sfKeyEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfKeyEvent>(),
        24usize,
        concat!("Size of: ", stringify!(sfKeyEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfKeyEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfKeyEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfKeyEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfKeyEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfKeyEvent>())).code as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfKeyEvent),
            "::",
            stringify!(code)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfKeyEvent>())).alt as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfKeyEvent),
            "::",
            stringify!(alt)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfKeyEvent>())).control as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfKeyEvent),
            "::",
            stringify!(control)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfKeyEvent>())).shift as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sfKeyEvent),
            "::",
            stringify!(shift)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfKeyEvent>())).system as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(sfKeyEvent),
            "::",
            stringify!(system)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfTextEvent {
    pub type_: sfEventType,
    pub unicode: sfUint32,
}
#[test]
fn bindgen_test_layout_sfTextEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfTextEvent>(),
        8usize,
        concat!("Size of: ", stringify!(sfTextEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfTextEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfTextEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfTextEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfTextEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfTextEvent>())).unicode as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfTextEvent),
            "::",
            stringify!(unicode)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfMouseMoveEvent {
    pub type_: sfEventType,
    pub x: ::std::os::raw::c_int,
    pub y: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_sfMouseMoveEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfMouseMoveEvent>(),
        12usize,
        concat!("Size of: ", stringify!(sfMouseMoveEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfMouseMoveEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfMouseMoveEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseMoveEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseMoveEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseMoveEvent>())).x as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseMoveEvent),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseMoveEvent>())).y as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseMoveEvent),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfMouseButtonEvent {
    pub type_: sfEventType,
    pub button: sfMouseButton,
    pub x: ::std::os::raw::c_int,
    pub y: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_sfMouseButtonEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfMouseButtonEvent>(),
        16usize,
        concat!("Size of: ", stringify!(sfMouseButtonEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfMouseButtonEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfMouseButtonEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseButtonEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseButtonEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseButtonEvent>())).button as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseButtonEvent),
            "::",
            stringify!(button)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseButtonEvent>())).x as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseButtonEvent),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseButtonEvent>())).y as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseButtonEvent),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, Hash, PartialOrd, Ord, PartialEq, Eq)]
pub struct sfMouseWheelEvent {
    pub type_: sfEventType,
    pub delta: ::std::os::raw::c_int,
    pub x: ::std::os::raw::c_int,
    pub y: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_sfMouseWheelEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfMouseWheelEvent>(),
        16usize,
        concat!("Size of: ", stringify!(sfMouseWheelEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfMouseWheelEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfMouseWheelEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelEvent>())).delta as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelEvent),
            "::",
            stringify!(delta)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelEvent>())).x as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelEvent),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelEvent>())).y as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelEvent),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialOrd, PartialEq)]
pub struct sfMouseWheelScrollEvent {
    pub type_: sfEventType,
    pub wheel: sfMouseWheel,
    pub delta: f32,
    pub x: ::std::os::raw::c_int,
    pub y: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_sfMouseWheelScrollEvent() {
    assert_eq!(
        ::std::mem::size_of::<sfMouseWheelScrollEvent>(),
        20usize,
        concat!("Size of: ", stringify!(sfMouseWheelScrollEvent))
    );
    assert_eq!(
        ::std::mem::align_of::<sfMouseWheelScrollEvent>(),
        4usize,
        concat!("Alignment of ", stringify!(sfMouseWheelScrollEvent))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelScrollEvent>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelScrollEvent),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelScrollEvent>())).wheel as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelScrollEvent),
            "::",
            stringify!(wheel)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelScrollEvent>())).delta as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelScrollEvent),
            "::",
            stringify!(delta)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelScrollEvent>())).x as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelScrollEvent),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<sfMouseWheelScrollEvent>())).y as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sfMouseWheelScrollEvent),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialOrd, PartialEq)]
pub struct sfJoystickMoveEvent {
    pub type_: sfEventType,
    pub joystickId: ::std::os::raw::c_uint,
    pub axis: sfJoystickAxis,
    pub position: f32,
}
